Bug 172131 FMM, Comments which suggest the wrong (De)Allocator, and Style r=dougt sr=darin